--- a/packages/components/button/index.css
+++ b/packages/components/button/index.css
@@ -2,6 +2,7 @@
   background-color: white;
   padding: 3px 6px;
   font-size: 14px;
+  cursor: pointer;
 }
 .v-button--primary {
   background-color: lightblue;
