--- a/packages/styles/button.scss
+++ b/packages/styles/button.scss
@@ -1,15 +1,18 @@
 .v-button {
-  background-color: white;
+  background-color: transparent;
   padding: 3px 6px;
   font-size: 14px;
   cursor: pointer;
+  border: 1px solid #eee;
 
   // type
   &--primary {
     background-color: lightblue;
+    border: 1px solid lightblue;
   }
   &--success {
     background-color: lightgreen;
+    border: 1px solid lightgreen;
   }
 
   // size
